# rusted-brains-stopwatch

./: Cargo.toml  README.md  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
