[package]
authors = ["Filip Wieland <filiplamparski@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rusted-brains-stopwatch"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.3"
ssd1306 = "0.2.6"
# Can't use 0.5.x series because it's not compatible with ssd1306
embedded-graphics = "0.4.9"

[dependencies.stm32f4xx-hal]
version = "0.6.0"
features = ["stm32f446", "rt"]

[dependencies.arrayvec]
version = "0.5.1"
default-features = false

[[bin]]
name = "rusted-brains-stopwatch"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
